--- a/index.html
+++ b/index.html
@@ -1,28 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Irish Rail Data</title>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 
+  <script type="text/javascript" src="assets/js/d3.min.js"></script>
+  <script type="text/javascript" src="assets/js/crossfilter.min.js"></script>
+  <script type="text/javascript" src="assets/js/dc.min.js"></script>
+  <script type="text/javascript" src="assets/js/queue.min.js"></script>
+  <script type="text/javascript" src="assets/js/graph.js"></script>
 </head>
+
 <body>
-    <header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Irish Rail Data Charts</a>
+      </div>
+    </div>
+  </nav>
+  <main>
+    <section class="section">
+      <div class="container">
 
-    </header>
-    <section>
-
+        <div class="row">
+          <div class="col-xs-12 col-sm-12">
+            <h1 class="section-heading">A3 Safety</h1>
+            <div id="discipline-selector"></div>
+          </div>
+        </div>
     </section>
-    <footer>
 
-    </footer>
+    <!---------------- Section 2 (bar charts) ------------------------------>
+    <section class="section">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 text-center">
+            <p class="section-paragraph">Men outnumber women 10 to 1</p>
+          </div>
+          <div class="col-xs-12 col-sm-4 text-center">
+            <p class="section-paragraph">Men earn on average about 15% more</p>
+          </div>
+          <div class="col-xs-12 col-sm-4 text-center">
+            <p class="section-paragraph">Distribution of ranks is weighted towards the upper level for men.</p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-4 text-center" id="gender-balance" class="custom-chart"></div>
+          <div class="col-xs-12 col-sm-4 text-center" id="average-salary" class="custom-chart"></div>
+          <div class="col-xs-12 col-sm-4 text-center" id="rank-distribution" class="custom-chart"></div>
+        </div>
+      </div>
+    </section>
+
+    <!---------------- Section 3 (dot charts) ------------------------------>
+    <section class="section">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 text-center">
+            <p class="section-paragraph">Section 3</p>
+          </div>
+
+          <div class="col-xs-12 col-sm-12 text-center" id="service-salary">
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!---------------- Section 4 (dot charts) ------------------------------>
+    <section class="section">
+      <div class="container">
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 text-center">
+            <p class="section-paragraph">Section 4</p>
+          </div>
+
+          <div class="col-xs-12 col-sm-12 text-center" id="phd-salary"></div>
+        </div>
+
+      </div>
+    </section>
+  </main>
+  <footer>
+
+  </footer>
 </body>
+
 </html>
