updated headings on graphs

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+ 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
@@ -19,6 +20,7 @@
   <script type="text/javascript" src="assets/js/dc.min.js"></script>
   <script type="text/javascript" src="assets/js/queue.min.js"></script>
   <script type="text/javascript" src="assets/js/graph.js"></script>
+
 </head>
 
 <body>
@@ -47,15 +49,11 @@
 
         <div class="row">
           <div class="col-xs-12 col-sm-4 text-center">
-            <p class="section-paragraph">Men outnumber women 10 to 1</p>
+            <p class="section-paragraph">Year</p>
           </div>
           <div class="col-xs-12 col-sm-4 text-center">
-            <p class="section-paragraph">Men earn on average about 15% more</p>
+            <p class="section-paragraph">Period</p>
           </div>
-          <div class="col-xs-12 col-sm-4 text-center">
-            <p class="section-paragraph">Distribution of ranks is weighted towards the upper level for men.</p>
-          </div>
-        </div>
 
         <div class="row">
           <div class="col-xs-12 col-sm-4 text-center" id="gender-balance" class="custom-chart"></div>
@@ -71,7 +69,7 @@
 
         <div class="row">
           <div class="col-xs-12 col-sm-12 text-center">
-            <p class="section-paragraph">Section 3</p>
+            <p class="section-paragraph">LTA</p>
           </div>
 
           <div class="col-xs-12 col-sm-12 text-center" id="service-salary">
@@ -87,7 +85,7 @@
 
         <div class="row">
           <div class="col-xs-12 col-sm-12 text-center">
-            <p class="section-paragraph">Section 4</p>
+            <p class="section-paragraph">ROD</p>
           </div>
 
           <div class="col-xs-12 col-sm-12 text-center" id="phd-salary"></div>
